// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render align 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -3,8 +3,9 @@
      "color": "#1e1e1e",
      "font-size": "calc((13 / 13) * 13px)",
      "font-weight": "normal",
      "line-height": "1.4",
      "margin": "0",
+     "text-align": "center",
      "text-wrap": "pretty",
    },
  ]
`;

exports[`Text should render highlighted words with highlightCaseSensitive 1`] = `
.emotion-0 {
  color: #1e1e1e;
  line-height: 1.4;
  margin: 0;
  text-wrap: balance;
  text-wrap: pretty;
  font-size: calc((13 / 13) * 13px);
  font-weight: normal;
}

.emotion-0 mark {
  background: #f0b849;
  border-radius: 2px;
  box-shadow: 0 0 0 1px rgba( 0, 0, 0, 0.05 ) inset,0 -1px 0 rgba( 0, 0, 0, 0.1 ) inset;
}

<div>
  <span
    class="components-truncate components-text emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Text"
    role="heading"
  >
    <span
      class=""
    >
      Lorem ipsum.
    </span>
  </span>
</div>
`;

exports[`Text snapshot tests should render correctly 1`] = `
.emotion-0 {
  color: #1e1e1e;
  line-height: 1.4;
  margin: 0;
  text-wrap: balance;
  text-wrap: pretty;
  font-size: calc((13 / 13) * 13px);
  font-weight: normal;
}

<div>
  <span
    class="components-truncate components-text emotion-0 emotion-1"
    data-wp-c16t="true"
    data-wp-component="Text"
  >
    Lorem ipsum.
  </span>
</div>
`;
